ctypes_canapedll/CANapAPI_stripped.h

typedef unsigned long DWORD;
typedef unsigned int UINT;
enum TApplicationType 
{
  eUNDEFINED   = 0,
  eCANAPE      = 1,    
  eAPPLOCATION = 3     
};
enum TScriptStatus
{
  eTScrReady = 1,      
  eTScrStarting,       
  eTScrRunning,        
  eTScrSleeping,       
  eTScrSuspended,      
  eTScrTerminated,     
  eTScrFinishedReturn, 
  eTScrFinishedCancel, 
  eTScrFailure,        
  eTScrTimeout,        
  eTScrDelayedCompiling, 
                         
  eTScrException       
};
enum e_RamMode
{
  e_TR_MODE_RAM=      0, 
  e_TR_MODE_ROM=      1  
};
enum TRecorderType
{
  eTRecorderTypeMDF         = 0, 
  eTRecorderTypeILinkRT     = 1, 
  eTRecorderTypeBLF         = 2  
};
enum ASAP3_EVENT_CODE
{
  et_ON_DATA_ACQ_START,              
  et_ON_DATA_ACQ_STOP,               
  et_ON_BEFORE_DATA_ACQ_START,       
  et_ON_CLOSEPROJECT,                
  et_ON_OPENPROJECT,                 
  et_ON_CLOSECANAPE                  
};
enum TFormat
{
  ECU_INTERNAL = 0,                 
  PHYSICAL_REPRESENTATION = 1,      
};
enum TValueType
{
  VALUE  = 0, 
  CURVE  = 1, 
  MAP    = 2, 
  AXIS   = 3, 
  ASCII  = 4, 
  VAL_BLK= 5  
};
enum TObjectType 
{
  OTT_MEASURE   = 0, 
  OTT_CALIBRATE = 1, 
  OTT_UNKNOWN   = 2  
};
enum eServiceStates
{
 e_Created  =10,             
 e_Running  =e_Created +10,  
 e_Finished =e_Running +10,  
 e_TimeOut  =e_Finished+10   
};
typedef unsigned long TAsap3DiagHdl;
enum EnRecorderState
{
 e_RecConfigure, 
 e_RecActive,    
 e_RecRunning,   
 e_RecPaused,    
 e_Suspended     
};
enum EnParamType
{
  ParamSigned     = 1, 
  ParamDouble     = 2, 
  ParamBCD        = 3, 
  ParamUnsigned   = 4, 
  ParamFloat      = 5, 
  ParamAutoDetect = 6  
};