ctypes_canapedll/CANapAPI.py


        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for F in other_dirs:
        if not os.path.isabs(F):
            F = os.path.abspath(F)
        load_library.other_dirs.append(F)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["CANapAPI64.dll"] = load_library("CANapAPI64.dll")

# 1 libraries
# End libraries

# No modules

DWORD = c_ulong# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 4

UINT = c_uint# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 5

enum_TApplicationType = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 144

eUNDEFINED = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 144

eCANAPE = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 144

eAPPLOCATION = 3# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 144

enum_TScriptStatus = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrReady = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrStarting = (eTScrReady + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrRunning = (eTScrStarting + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrSleeping = (eTScrRunning + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrSuspended = (eTScrSleeping + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrTerminated = (eTScrSuspended + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrFinishedReturn = (eTScrTerminated + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrFinishedCancel = (eTScrFinishedReturn + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrFailure = (eTScrFinishedCancel + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrTimeout = (eTScrFailure + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrDelayedCompiling = (eTScrTimeout + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

eTScrException = (eTScrDelayedCompiling + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 150

enum_e_RamMode = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 166

e_TR_MODE_RAM = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 166

e_TR_MODE_ROM = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 166

enum_TRecorderType = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 171

eTRecorderTypeMDF = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 171

eTRecorderTypeILinkRT = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 171

eTRecorderTypeBLF = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 171

enum_ASAP3_EVENT_CODE = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_DATA_ACQ_START = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_DATA_ACQ_STOP = (et_ON_DATA_ACQ_START + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_BEFORE_DATA_ACQ_START = (et_ON_DATA_ACQ_STOP + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_CLOSEPROJECT = (et_ON_BEFORE_DATA_ACQ_START + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_OPENPROJECT = (et_ON_CLOSEPROJECT + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

et_ON_CLOSECANAPE = (et_ON_OPENPROJECT + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 177

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 186
class struct_TApplicationID(Structure):
    pass

struct_TApplicationID._pack_ = 1
struct_TApplicationID.__slots__ = [
    'tApplicationType',
    'tApplicationPath',
]
struct_TApplicationID._fields_ = [
    ('tApplicationType', enum_TApplicationType),
    ('tApplicationPath', c_char * int(260)),
]

enum_TFormat = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 191

ECU_INTERNAL = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 191

PHYSICAL_REPRESENTATION = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 191

enum_TValueType = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

VALUE = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

CURVE = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

MAP = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

AXIS = 3# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

ASCII = 4# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

VAL_BLK = 5# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 196

enum_TObjectType = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 205

OTT_MEASURE = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 205

OTT_CALIBRATE = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 205

OTT_UNKNOWN = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 205

enum_eServiceStates = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 211

e_Created = 10# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 211

e_Running = (e_Created + 10)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 211

e_Finished = (e_Running + 10)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 211

e_TimeOut = (e_Finished + 10)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 211

TAsap3DiagHdl = c_ulong# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 218

enum_EnRecorderState = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

e_RecConfigure = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

e_RecActive = (e_RecConfigure + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

e_RecRunning = (e_RecActive + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

e_RecPaused = (e_RecRunning + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

e_Suspended = (e_RecPaused + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 220

enum_EnParamType = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamSigned = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamDouble = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamBCD = 3# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamUnsigned = 4# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamFloat = 5# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

ParamAutoDetect = 6# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 228

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 237
class struct_DiagJobResponse(Structure):
    pass

struct_DiagJobResponse._pack_ = 1
struct_DiagJobResponse.__slots__ = [
    'job_responsestring',
    'job_responseValue',
]
struct_DiagJobResponse._fields_ = [
    ('job_responsestring', String),
    ('job_responseValue', c_double),
]

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 246
class union_PValues(Union):
    pass

union_PValues._pack_ = 1
union_PValues.__slots__ = [
    'IVal',
    'UIVal',
    'FVal',
    'DVal',
]
union_PValues._fields_ = [
    ('IVal', c_int),
    ('UIVal', c_uint),
    ('FVal', c_float),
    ('DVal', c_double),
]

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 242
class struct_DiagNumericParameter(Structure):
    pass

struct_DiagNumericParameter._pack_ = 1
struct_DiagNumericParameter.__slots__ = [
    'DiagNumeric',
    'unnamed_1',
    'Values',
]
struct_DiagNumericParameter._anonymous_ = [
    'unnamed_1',
]
struct_DiagNumericParameter._fields_ = [
    ('DiagNumeric', enum_EnParamType),
    ('unnamed_1', union_PValues),
    ('Values', union_PValues),
]

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 255
class struct_DiagNotificationStruct(Structure):
    pass

struct_DiagNotificationStruct._pack_ = 1
struct_DiagNotificationStruct.__slots__ = [
    'DiagHandle',
    'DiagState',
    'PrivateData',
]
struct_DiagNotificationStruct._fields_ = [
    ('DiagHandle', TAsap3DiagHdl),
    ('DiagState', enum_eServiceStates),
    ('PrivateData', POINTER(None)),
]

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 261
class struct_TMeasurementListEntry(Structure):
    pass

struct_TMeasurementListEntry._pack_ = 1
struct_TMeasurementListEntry.__slots__ = [
    'taskId',
    'rate',
    'SaveFlag',
    'Disabled',
    'ObjectName',
]
struct_TMeasurementListEntry._fields_ = [
    ('taskId', c_ushort),
    ('rate', c_ulong),
    ('SaveFlag', c_int),
    ('Disabled', c_int),
    ('ObjectName', String),
]

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 273
class struct_MeasurementListEntries(Structure):
    pass
